--- a/_quarto.yml
+++ b/_quarto.yml
@@ -1,8 +1,8 @@
 project:
   type: website
-  output-dir: docs
-  resources:
-    - docs/CV_IvanMARIN.pdf
+  # output-dir: docs
+  # resources:
+  #   - docs/CV_IvanMARIN.pdf
 
 website:
   title: "Ivan Marin"
